Added: pt_BR.xml: Not implemented features messages Added: Window alert with no implemented messages when click in tourneys menu;

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -4,6 +4,10 @@
 		<general_title>Cliente Web ChessD</general_title>
 		<general_name>ChessD</general_name>
 	</general>
+	<utils>
+		<not_implemented_title>Não implementado.</not_implemented_title>
+		<not_implemented>Este recurso não está implementado no momento.</not_implemented>
+	</utils>
 	<window>
 		<window_yes>Sim</window_yes>
 		<window_no>Nao</window_no>
