Fixed: Lang file (pt_Br) to UTF8 (yet, again)

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -44,7 +44,7 @@
 		<menu_adjourn>Adjudicar</menu_adjourn>
 		<menu_search_game>Buscar Partida</menu_search_game>
 		<menu_search_user>Buscar Usuário</menu_search_user>
-		<menu_news>Notí­cias</menu_news>
+		<menu_news>Notícias</menu_news>
 		<menu_preferences>Preferências</menu_preferences>
 		<menu_help>Ajuda</menu_help>
 		<menu_exit>Sair</menu_exit>
