--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -241,6 +241,9 @@
 		<profile_change_image_title>Mudar foto</profile_change_image_title>
 		<profile_load_error>Erro</profile_load_error>
 		<profile_load_error_title>Não foi possí­vel carregar a foto</profile_load_error_title>
+		<profile_year>a</profile_year>
+		<profile_month>m</profile_month>
+		<profile_day>d</profile_day>
 	</profile>
 	<register>
 		<register_inf>Por favor preencha as informações abaixo para criar sua conta no Xadrez Livre</register_inf>
