Modified: 	css from Room context menu, underline create room Modified: 	set id to room name input Modified: 	create span element to create room label Added: 	new label to create rooms Modified: 	open only one create room window and focus room name input

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -90,6 +90,7 @@
 		<room_order_nick>Apelido</room_order_nick>
 		<room_order_rating>Rating</room_order_rating>
 		<room_create_room>Criar sala</room_create_room>
+		<room_create_rooms>Criar salas</room_create_rooms>
 		<room_cancel_room>Cancelar sala</room_cancel_room>
 		<room_name>Nome: </room_name>
 		<room_description>Descrição: </room_description>
