--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -213,6 +213,8 @@
 		<game_button_prev>Anterior</game_button_prev>
 		<game_button_next>Próximo</game_button_next>
 		<game_button_last>Ótimo</game_button_last>
+
+		<game_oldgame_alert>Você não pode ver um jogo antigo enquanto estiver jogando ou observando uma partida.</game_observer_alert>
 	</game>
 	<profile>
 		<profile_window>Perfil e Informações</profile_window>
