--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -214,7 +214,7 @@
 		<game_button_next>Próximo</game_button_next>
 		<game_button_last>Ótimo</game_button_last>
 
-		<game_oldgame_alert>Você não pode ver um jogo antigo enquanto estiver jogando ou observando uma partida.</game_observer_alert>
+		<game_oldgame_alert>Você não pode ver um jogo antigo enquanto estiver jogando ou observando uma partida.</game_oldgame_alert>
 	</game>
 	<profile>
 		<profile_window>Perfil e Informações</profile_window>
