--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -251,15 +251,15 @@
 		<profile_day>d</profile_day>
 	</profile>
 	<register>
-		<register_inf>Por favor preencha as informações abaixo para criar sua conta no Xadrez Livre</register_inf>
+		<register_inf>Por favor preencha as informações abaixo para criar sua conta no Xadrez Livre.</register_inf>
 		<register_title>Cadastro</register_title>
-		<register_user_name>Nome de Usuário</register_user_name>
+		<register_user_name>Nome de Usuário:</register_user_name>
 		<register_user_inf>Usar somente caracteres minúsculos, números, sem espaços, '-', '.' e '_' </register_user_inf>
-		<register_mail>E-mail</register_mail>
-		<register_mail_inf>Permite recuperar sua senha em caso de esquecimento</register_mail_inf>
-		<register_passwd>Senha</register_passwd>
-		<register_passwd_confirm>Senha (confirmação)</register_passwd_confirm>
-		<register_bt_confirm>Confirmar</register_bt_confirm>
+		<register_mail>E-mail (opcional):</register_mail>
+		<register_mail_inf>Permite recuperar sua senha em caso de esquecimento.</register_mail_inf>
+		<register_passwd>Senha:</register_passwd>
+		<register_passwd_confirm>Senha (confirmação):</register_passwd_confirm>
+		<register_bt_confirm>Cadastrar</register_bt_confirm>
 		<register_bt_cancel>Cancelar</register_bt_cancel>
 		<register_invalid_user_name>Nome de usuário inválido</register_invalid_user_name>
 		<register_invalid_mail>E-mail inválido</register_invalid_mail>
