--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -183,11 +183,11 @@
 
 		<game_options>Opções</game_options>
 		<game_moves>Lances</game_moves>
-		<game_send_draw>Empatar</game_send_draw>
+		<game_send_draw>Propor empate</game_send_draw>
 		<game_send_resign>Desistir</game_send_resign>
-		<game_send_terminate>Encerrar</game_send_terminate>
-		<game_send_adjourn>Pausar / adiar</game_send_adjourn>
-		<game_give_time>Dar tempo ao adversário</game_give_time>
+		<game_send_terminate>Propor encerramento</game_send_terminate>
+		<game_send_adjourn>Propor adiamento</game_send_adjourn>
+		<game_give_time>Dar mais tempo ao adversário</game_give_time>
 		<game_pawn_promotion>Promoção do peão</game_pawn_promotion>
 		<game_promotion_queen>Dama</game_promotion_queen>
 		<game_promotion_rook>Torre</game_promotion_rook>
