Fixed: Create Room window and alert messages Close window pressing enter with valid name Don't close window with invalid names

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -97,8 +97,9 @@
 		<room_description>Descrição: </room_description>
 		<room_create>Criar</room_create>
 		<room_cancel_text>Realmente deseja cancelar a criação desta sala?</room_cancel_text>
-		<room_invalid_name>Nome inválido para sala</room_invalid_name>
-		<room_invalid_length>Tamanho máximo de 50 caracteres</room_invalid_length>
+		<room_error>Erro na criação de sala</room_error>
+		<room_invalid_name>Nome inválido para sala.</room_invalid_name>
+		<room_invalid_length>Tamanho máximo de 30 caracteres.</room_invalid_length>
 	</room>
 	<group>
 		<group_default>Amigos</group_default>
