Added: Random color in challenge menu; Added: Announce challenge text in pt_BR; Added: Show random color in challenge menu;

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -149,6 +149,7 @@
 
 		<challenge_menu_match_title>Meus desafios</challenge_menu_match_title>
 		<challenge_menu_announce_title>Desafios anúnciados</challenge_menu_announce_title>
+		<challenge_menu_announce>Anunciar partida</challenge_menu_announce>
 		<challenge_menu_postpone_title>Partidas adiadas</challenge_menu_postpone_title>
 	</challenge>
 	<game>
