--- a/scripts/lang/en_US.xml
+++ b/scripts/lang/en_US.xml
@@ -4,6 +4,10 @@
 		<general_title>Web ChessD Client</general_title>
 	        <general_name>ChessD</general_name>
 	</general>
+	<utils>
+		<not_implemented_title>Not implemented</not_implemented_title>
+		<not_implemented>Feature not implemented on this version </not_implemented>
+	</utils>
 	<window>
 	        <window_yes>Yes</window_yes>
 	        <window_no>No</window_no>
@@ -18,6 +22,8 @@
 	<login>
 		<login_title>Welcome to new Xadrez Livre Web Interface!</login_title>
 		<login_text1>This is a test version that doesn't depends of other software. It isn't available commands to change messages with the old server user's, it's only possible betwin the users on this web interface. We are counting on you, with criticisms, suggestions, to solve any possible problems found and have a better version soon!</login_text1>
+
+
 		<login_footer>Have fun!</login_footer>
 		<login_remember_pass>Remember password</login_remember_pass>
 		<login_signin>Quick register</login_signin>
@@ -26,14 +32,18 @@
 		<login_server_down>Server off-line. Try again later.</login_server_down>
 		<login_connection_refused>Jabber server off-line. Try again later.</login_connection_refused>
 		<login_invalid_user>User or password incorrect.</login_invalid_user>
+		<login_banned_user>Banned user</login_banned_user>
+		<login_lost_connection>Connection lost with the server.</login_lost_connection>
 		<login_load_wait>Wait...</login_load_wait>
 		<login_load_start>Starting loader...</login_load_start>
 		<login_load_scripts>Loading scripts...</login_load_scripts>
 		<login_load_css>Loading css...</login_load_css>
 		<login_load_images>Loading images...</login_load_images>
 		<login_load_user_list>Loading user list</login_load_user_list>
+		<login_validate_user>Invalid User</login_validate_user>
 	</login>
 	<menu>
+		<menu_adjourn>Adjourn</menu_adjourn>
 		<menu_search_game>Search game</menu_search_game>
 		<menu_search_user>Search user</menu_search_user>
 		<menu_news>News</menu_news>
@@ -47,7 +57,6 @@
 		<menu_history>History</menu_history>
 	</menu>
 	<contact>
-		<menu_adjourn>Adjourn</menu_adjourn>
 		<contact_contacts>Contacts</contact_contacts>
 		<contact_online>Online</contact_online>
 		<contact_offline>Offline</contact_offline>
@@ -55,47 +64,42 @@
 		<contact_order_rating>Rating</contact_order_rating>
 		<contact_invite>Add user</contact_invite>
 		<contact_invite_text>%s added you, do you accept?</contact_invite_text>
-		<contact_auth>Accept</contact_auth>
-		<contact_decline>Decline</contact_decline>
-		<contact_ok>OK</contact_ok>
 		<contact_remove_title>Remove user</contact_remove_title>
 		<contact_remove_text>Are you really sure you want to remove the user?</contact_remove_text>
 		<contact_search_user>Search user</contact_search_user>
-		<contact_search>Search</contact_search>
-		<contact_user>User</contact_user>
-		<contact_cancel>Cancel</contact_cancel>
+		<contact_user_t>User:</contact_user_t>
 		<contact_no_user_found>No user found</contact_no_user_found>
 		<contact_user_found>Users found:</contact_user_found>
-		<contact_close>Close</contact_close>
 		<contact_user>User</contact_user>
 		<contact_teacher>Teacher</contact_teacher>
 		<contact_admin>Admin</contact_admin>
+		<contact_robot>Robot</contact_robot>
 		<contact_search_by>Search by:</contact_search_by>
 		<contact_by_name>Name</contact_by_name>
 		<contact_by_user>Nick</contact_by_user>
 		<contact_both>Both</contact_both>
+		<contact_change_profile>Change my profile</contact_change_profile>
 	</contact>
 	<chat>
 		<chat_warning>Warning</chat_warning>
 		<chat_max_exceeded>Maximum %i chats opens</chat_max_exceeded>
 	</chat>
 	<room>
-		<room_default>general</room_default>
+		<room_default>General</room_default>
 		<room_contacts>Contacts</room_contacts>
 		<room_all>Online</room_all>
 		<room_order_nick>Nick</room_order_nick>
 		<room_order_rating>Rating</room_order_rating>
 		<room_create_room>Create room</room_create_room>
+		<room_create_rooms>Create rooms</room_create_rooms>
 		<room_cancel_room>Cancel room</room_cancel_room>
 		<room_name>Name: </room_name>
 		<room_description>Description: </room_description>
 		<room_create>Create</room_create>
-		<room_cancel>Cancel</room_cancel>
 		<room_cancel_text>Are you sure you want to cancel the creation of this room?</room_cancel_text>
+		<room_error>Error to open a room</room_error>
 		<room_invalid_name>Invalid room name</room_invalid_name>
 		<room_invalid_length>Maximum length of 50 characters</room_invalid_length>
-		<room_yes>Yes</room_yes>
-		<room_no>No</room_no>
 	</room>
 	<group>
 		<group_default>Friends</group_default>
@@ -127,7 +131,8 @@
 		<challenge_title_invite>Invite to play</challenge_title_invite>
 		<challenge_title_offer>Invite to play</challenge_title_offer>
 		<challenge_information>invite to play a game with the following characteristics:</challenge_information>
-		<challenge_pieces>Pieces:</challenge_pieces>
+		<challenge_my_pieces>My pieces:</challenge_my_pieces>
+		<challenge_op_pieces>Your picies:</challenge_op_pieces>
 		<challenge_time_label>Game time:</challenge_time_label>
 		<challenge_category>Game category:</challenge_category>
 		<challenge_inc_label>Increment:</challenge_inc_label>
@@ -136,18 +141,19 @@
 		<challenge_rating>Rated</challenge_rating>
 		<challenge_private>Private game</challenge_private>
 		<challenge_invite>Invite</challenge_invite>
-		<challenge_cancel>Cancel</challenge_cancel>
-		<challenge_decline>Decline</challenge_decline>
 		<challenge_chat>Open chat</challenge_chat>
 		<challenge_new_parameters>Rematch</challenge_new_parameters>
-		<challenge_accept>Accept</challenge_accept>
 		<challenge_no_time>Without time</challenge_no_time>
+		<challenge_color_auto>Automatic</challenge_color_auto>
+		<challenge_auto_flag>Auto-flag</challenge_auto_flag>
+
+		<challenge_menu_match_title>My challenges</challenge_menu_match_title>
+		<challenge_menu_announce_title>Announced challenges</challenge_menu_announce_title>
+		<challenge_menu_announce>Announce challange</challenge_menu_announce>
+		<challenge_menu_postpone_title>Postpone games</challenge_menu_postpone_title>
+
 	</challenge>
 	<game>
-		<game_accept>Accept</game_accept>
-		<game_decline>Decline</game_decline>
-		<game_ok>Ok</game_ok>
-		<game_cancel>Cancel</game_cancel>
 		<game_draw>Request draw</game_draw>
 		<game_draw_text>%s requested a draw, do you accept?</game_draw_text>
 		<game_draw_denied>%s decline your draw request.</game_draw_denied>
@@ -182,7 +188,7 @@
 		<game_promotion_rook>Rook</game_promotion_rook>
 		<game_promotion_bishop>Bishop</game_promotion_bishop>
 		<game_promotion_knight>Knight</game_promotion_knight>
-
+		
 		<game_observer_alert>You can't observe a new game while you still playing or observing a game.</game_observer_alert>
 		<game_observer_alert_title>Alert</game_observer_alert_title>
 
@@ -204,6 +210,8 @@
 		<game_button_prev>Previous</game_button_prev>
 		<game_button_next>Next</game_button_next>
 		<game_button_last>Last</game_button_last>
+		
+		<game_oldgame_alert>You can not watch a game while you are playing or watching another game</game_oldgame_alert>
 	</game>
 	<profile>
 		<profile_window>Profile and informations</profile_window>
@@ -235,28 +243,75 @@
 		<profile_change_image_title>Change photo</profile_change_image_title>
 		<profile_load_error>Error</profile_load_error>
 		<profile_load_error_title>It wasn't possible upload the photo</profile_load_error_title>
+		<profile_year>y</profile_year>
+		<profile_month>m</profile_month>
+		<profile_day>d</profile_day>
+		<profile_error>Erro while saving profile</profile_error>
+		<profile_desc_limit>The description must have at most 200 characters.</profile_desc_limit>
 	</profile>
 	<register>
 		<register_inf>Please fill the informations above to create your Xadrez Livre account</register_inf>
 		<register_title>Register</register_title>
+		<register_login>Login </register_login>
+		<register_max_char>(max. 14 characters)</register_max_char>
+		<register_user_inf>Use just lowercase characters, numbers, without spaces, '-', '.' and '_'</register_user_inf>
 		<register_user_name>User name</register_user_name>
 		<register_mail>E-mail</register_mail>
 		<register_mail_inf>Allow to recover your password</register_mail_inf>
 		<register_passwd>Password</register_passwd>
-		<register_passwd_confirm>Password (Confim)</register_passwd_confirm>
+		<register_passwd_confirm1>Password</register_passwd_confirm1>
+		<register_passwd_confirm2>(Confirm)</register_passwd_confirm2>
 		<register_bt_confirm>Confirm</register_bt_confirm>
-		<register_bt_cancel>Cancel</register_bt_cancel>
+		<register_invalid_user_name>Invalid username</register_invalid_user_name>
+		<register_invalid_user_name_len>Your login must have at most 14 characters</register_invalid_user_name_len>
+		<register_invalid_mail>Invalid email</register_invalid_mail>
+		<register_invalid_password>Invalid password</register_invalid_password>
+		<register_error_409>User already exist</register_error_409>
+		<register_sucess_message>Registered user successfully</register_sucess_message>
 	</register>
 	<oldgame>
 		<oldgame_title>Old games</oldgame_title>
+		<oldgame_my_games>My games</oldgame_my_games>
+		<oldgame_other_games>Another user's games</oldgame_other_games>
 		<oldgame_player1>Player 1:</oldgame_player1>
+		<oldgame_pieces>Pieces:</oldgame_pieces>
+		<oldgame_both>Any</oldgame_both>
 		<oldgame_player2>Player 2:</oldgame_player2>
-		<oldgame_white>White</oldgame_white>
-		<oldgame_black>Black</oldgame_black>
+		<oldgame_date_form>Data:</oldgame_date_form>
+		<oldgame_from>from:</oldgame_from>
+		<oldgame_to>to:</oldgame_to>
+		<oldgame_new_search>New search</oldgame_new_search>
+		<oldgame_search_result>Finded:</oldgame_search_result>
+		<oldgame_no_result>No old game finded.</oldgame_no_result>
+		<oldgame_player1_hd>Player 1</oldgame_player1_hd>
+		<oldgame_player2_hd>Player 2</oldgame_player2_hd>
 		<oldgame_category>Category</oldgame_category>
-		<oldgame_winner>Winner</oldgame_winner>
-		<oldgame_wintype>Win reason</oldgame_wintype>
-		<oldgame_date>Date</oldgame_date>
-		<oldgame_draw>Draw</oldgame_draw>
+		<oldgame_result>Result</oldgame_result>
+		<oldgame_date>Data</oldgame_date>
+		<oldgame_prev>Previous</oldgame_prev>
+		<oldgame_next>Next</oldgame_next>
+		<oldgame_format>Format: dd/mm/yyyy</oldgame_format>
+		<oldgame_no_moves>Game without moves</oldgame_no_moves>
+		<oldgame_invalid_begin>Invalid begining data!</oldgame_invalid_begin>
+		<oldgame_invalid_end>Invalid ending data!</oldgame_invalid_end>
+		<oldgame_invalid_interval>Invalid interval!</oldgame_invalid_interval>
+		<oldgame_invalid_date>Invalid data!</oldgame_invalid_date>
 	</oldgame>
+	<welcome>
+		<welcome_title>Welcome!</welcome_title>
+		<welcome_text1>Someone, please, translate this message 1.</welcome_text1>
+		<welcome_text2>Someone, please, translate this message 2.</welcome_text2>
+		<welcome_instruction>
+			<welcome_item><![CDATA[<b>Start a game:</b> Someone, please, translate this message 3.]]></welcome_item>
+			<welcome_item><![CDATA[<b>Start a game:</b> Someone, please, translate this message 4.]]></welcome_item>
+		</welcome_instruction>
+	</welcome>
+	<admin>
+		<admin_kick_ok>You kick the user successfully</admin_kick_ok>
+		<admin_ban_ok>You banned the user successfully</admin_ban_ok>
+		<admin_unban_ok>You unbanned the user successfully</admin_unban_ok>
+		<admin_user_ban>You were banned.Reason: </admin_user_ban>
+		<admin_user_kick>You were kicked.Reason: </admin_user_kick>
+
+	</admin>
 </language>
